   - Table view now has average TPS and peak TPS.
   - Removed individual sample TPS labels.

  Remove distinction between "abortions" and "errors" from the
  recorded statistics. All tests now result in a "successful
  transaction" or an "error".

  Removed deprecated BookHttpPlugin example. Use StringBeans instead.

  Minor changes to the plugin interface.

  HTTPPlugin enhancements
   - Can now send arbitrary headers. Note, the specific
     If-Modified-Since property has been removed, use the arbitrary
     header support. The TCPSniffer filter has been updated
     accordingly.
   - Most request strings, including the arbitrary header values, are
     now affected by the String Bean, see doc/HTTPPlugin.txt.

  Features from Kalle Burbeck:
   - HTTP plugin sniffer filter now has limited support for
     multipart forms.
   - HTTP plugin sniffer filter now generates test descriptions.

  Features from Paddy Spencer:
   - New "Sniff 'n' Grind" webapp (the management take no
     responsibility for Paddy's sense of humour).

   - Reworked HTTP proxy, added new HTTPS proxy
 
   - TCPSniffer changes:
     -timeout to set the proxy to timeout;
     -localSSLPort for use with the HTTPS proxy;
     -localHost for use with multiple local IP addresses;
     doesn't barf if you set remote host/port with proxy;


Grinder 2.6.5
-------------

  New tabbed Console layout.

  Arm/stop is now a single Console control.

  New "reset" Console control. This allows you to start a single
  Grinder process per machine and control the whole show from the
  Console.

  New Console control for the number of significant figures to
  display.

  You can now save data from console.

  HTTPClientHandler now supports multiple servers.

  Graph colour is now based on response time.

  Documentation fixes.


Grinder 2.6.4
-------------

  Fix -colour.

  Fix distribution: add HTTPClient classes to grinder.jar.

  Patch HTTP to fix handling of query strings.
